--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+layout: skeletal_home
+title: Skeletal
+subtitle: Democratizing the power of data, bit by bit.<br><br>Check out our projects...
 ---
 
